Tried to fix issues for chips. Anyway i'm done for today - so i can't figure out how to automatically drop chips that overflow the div bo x that there in so i been hacking it.     - keep the first name only     - if the total character len of the 3 chips is more than 15 char's drop the 3rd chip. --- usually overflow happens in this case. probably better way to drop chips     - in general at most 3 chips can fit so only display 3 chips.
Probably a way better way to do this shit. Just want overflow chips to not display smh smh smh

--- a/src/views/YourEvents/components/UserChips.scss
+++ b/src/views/YourEvents/components/UserChips.scss
@@ -25,7 +25,7 @@
 @media only screen and (min-width: $mobile-break) {
   .userchip__chip{
     margin-bottom: 100px;
-    max-width: 80px;
+    max-width: 85px;
 
 
   }
